# clash-crypto

./: .envrc  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  STYLE.md  build-config.nix  build.cfg  cabal.project  clash-crypto.cabal  flake.nix  makefile  orangecrab.pcf
.github/actions/hitlt/: action.yml
.github/actions/hitlt-bitstream/: action.yml
.github/actions/simulate/: action.yml
.github/setup/: 90-orangecrab.rules  Dockerfile  README.md  build.sh  deploykey  unique-device-num
.github/workflows/: ci.yml
RocqProofs/: Common.v  FLT.v  Karatsuba.v  Modulo.v  Wf.v  _CoqProject
_build/SHA/SHA256/04-bitstream/: topEntity.config
app/shake/: Main.hs  Shake.hs
app/shake/Development/Shake/: Clash.hs  Yosys.hs
app/shake/Development/Shake/Clash/: ECP5.hs  Formal.hs
app/shake/Development/Shake/Command/: Extra.hs
app/shake/Development/Shake/Config/: Extra.hs
nix/: cabal2nix.patch  clash.nix  hitl.nix  hitlt.nix  realize.sh  yosys.nix
result/SHA1/: hdl  log-log  out
src/Clash/Crypto/: Calculator.hs
src/Clash/Crypto/Calculator/: CLU.hs  Fraction.hs  ISA.hs  InverseModulo.hs  Karatsuba.hs  Modulo.hs  Simulate.hs  Utils.hs
src/Clash/Crypto/Calculator/InverseModulo/: Internal.hs
src/Clash/Crypto/Cipher/: AES.hs
src/Clash/Crypto/Cipher/AES/: Specification.hs  Streaming.hs
src/Clash/Crypto/Cipher/AES/Specification/: Algorithm.hs  Constants.hs  Definitions.hs  Properties.hs  Types.hs
src/Clash/Crypto/Cipher/AES/Streaming/: Algorithm.hs  Combinatorial.hs  Properties.hs
src/Clash/Crypto/ECDSA/: Algorithm.hs  Curves.hs  DeterministicNonce.hs  Fraction.hs  InverseModulo.hs  Karatsuba.hs  Lemmas.hs  Modulo.hs  Routines.hs  Simulate.hs  Utils.hs
src/Clash/Crypto/ECDSA/Internal/: InverseModulo.hs
src/Clash/Crypto/ECDSA/InverseModulo/: Internal.hs
src/Clash/Crypto/Hash/: HMAC.hs  SHA.hs
src/Clash/Crypto/Hash/SHA/: Specification.hs  Streaming.hs
src/Clash/Crypto/Hash/SHA/Specification/: Algorithm.hs  Definitions.hs  Properties.hs  Types.hs
src/Clash/Crypto/Hash/SHA/Streaming/: Padding.hs  Stages.hs
src/Clash/Crypto/MAC/: HMAC.hs
src/Clash/Crypto/PubKey/: ECDSA.hs
src/Clash/Crypto/PubKey/ECDSA/Nonce/: Deterministic.hs
src/Clash/Promoted/: Integer.hs  List.hs
src/Clash/Signal/: Channel.hs  DataStream.hs  Extra.hs
src/Clash/Signal/Delayed/: Extra.hs
src/Clash/Sized/: Stack.hs
src/Clash/Sized/Vector/: Extra.hs
src/Data/Constraint/Nat/: Extra.hs
src/Language/Haskell/: Unicode.hs
tests/Test/Clash/Crypto/ECDSA/: Karatsuba.hs
tests/Test/Clash/Crypto/Hash/: SHA.hs
tests/hitl/: Top.hs
tests/hitl/app/: Main.hs
tests/hitl/lib/: Domain.hs  Pll.hs
tests/hitl/lib/Clash/Cores/: UART.hs  Uart.hs
tests/hitl/lib/Clash/Cores/LatticeSemi/ECP5/: Domain.hs  Pll.hs
tests/hitl/lib/Clash/Crypto/Hitlt/: Shared.hs  Uart.hs
tests/hitl/lib/Hitl/Clash/Cores/: Uart.hs
tests/hitl/lib/Hitl/Clash/Cores/LatticeSemi/ECP5/: Domain.hs  Pll.hs
tests/hitl/lib/Hitl/Clash/Cores/Uart/: Extra.hs
tests/hitl/lib/Hitl/Clash/Crypto/Calculator/: CLU.hs
tests/hitl/lib/Hitl/Clash/Crypto/Hash/: Escape.hs
tests/hitl/lib/Hitl/Clash/Crypto/PubKey/: ECDSA.hs
tests/hitl/lib/Hitl/Clash/Sized/: Stack.hs
tests/hitl/lib/Hitlt/: Shared.hs  Uart.hs
tests/hitl/lib/Hitlt/Clash/Crypto/: Calculator.hs
tests/hitl/lib/Hitlt/Clash/Crypto/Calculator/: CLU.hs  InverseModulo.hs
tests/hitl/top/: AES.hs  Algorithm.hs  BEA.hs  CLU.hs  Calculator.hs  DeterministicNonce.hs  ECDSADerivePublicKey.hs  ECDSASign.hs  FastGCD.hs  FltCtmi.hs  HMAC.hs  ISAPrint.hs  InverseModulo.hs  Karatsuba.hs  KaratsubaModulo.hs  Modulo.hs  SHA.hs  SictMi.hs  Stack.hs
tests/hitl/top/SHA/: TH.hs
tests/lib/Test/Clash/Crypto/: Calculator.hs
tests/lib/Test/Clash/Crypto/Calculator/: InverseModulo.hs  Simulate.hs
tests/lib/Test/Clash/Crypto/Hash/: SHA.hs
tests/lib/Test/Clash/Crypto/PubKey/ECDSA/: Simulate.hs
tests/sim/: Main.hs
tests/sim/Simulate/Clash/Crypto/: Calculator.hs
tests/sim/Simulate/Clash/Crypto/Calculator/: CLU.hs  InverseModulo.hs  Karatsuba.hs  Modulo.hs  Nonce.hs
tests/sim/Simulate/Clash/Crypto/ECDSA/: Algorithm.hs  DeterministicNonce.hs  Nonce.hs
tests/sim/Simulate/Clash/Crypto/Hash/: SHA.hs
tests/sim/Simulate/Clash/Crypto/MAC/: HMAC.hs
tests/sim/Simulate/Clash/Crypto/PubKey/: ECDSA.hs
tests/sim/Simulate/Clash/Crypto/PubKey/ECDSA/Nonce/: Deterministic.hs
tests/sim/Simulate/Clash/Sized/: Stack.hs
tests/sim/Test/Clash/Crypto/: Calculator.hs
tests/sim/Test/Clash/Crypto/Calculator/: CLU.hs
tests/sim/Test/Clash/Crypto/Cipher/: AES.hs
tests/sim/Test/Clash/Crypto/Cipher/AES/: GoldenReference.hs  Specification.hs  Streaming.hs
tests/sim/Test/Clash/Crypto/Cipher/AES/Specification/: Algorithm.hs  Definitions.hs
tests/sim/Test/Clash/Crypto/Cipher/AES/Specifications/: Definitions.hs
tests/sim/Test/Clash/Crypto/Cipher/AES/Streaming/: Algorithm.hs
tests/sim/Test/Clash/Crypto/ECDSA/: InverseModulo.hs  Karatsuba.hs  Modulo.hs
tests/sim/Test/Clash/Crypto/Hash/: HMAC.hs  SHA.hs
tests/sim/Test/Clash/Crypto/MAC/: HMAC.hs
tests/sim/Test/Clash/Sized/: Stack.hs
tests/tasty/: Main.hs
