cabal-version:       3.4
name:                clash-crypto
synopsis:            Cryptographic hardware in Clash
description:         Cryptographic hardware that is implemented in the functional hardware description language Clash
version:             0.1
license:             CERN-OHL-P-2.0
license-file:        LICENSE
author:              QBayLogic B.V.
maintainer:          devops@qbaylogic.com
Copyright:           Copyright © 2024-2025 QBayLogic B.V.
Category:            Hardware

common common-options
  default-extensions:
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DerivingStrategies
    LambdaCase
    NoStarIsType
    OverloadedRecordDot
    RequiredTypeArguments
    TypeFamilies
    UnicodeSyntax
    ViewPatterns

    -- TemplateHaskell is used to support convenience functions such as
    -- 'listToVecTH' and 'bLit'.
    TemplateHaskell
    QuasiQuotes

    -- Prelude isn't imported by default as Clash offers Clash.Prelude
    NoImplicitPrelude
  ghc-options:
    -Wall -Wcompat
    -- Plugins to support type-level constraint solving on naturals
    -fplugin GHC.TypeLits.Extra.Solver
    -fplugin GHC.TypeLits.Normalise
    -fplugin GHC.TypeLits.KnownNat.Solver
    -fconstraint-solver-iterations=20

    -- Clash needs access to the source code in compiled modules
    -fexpose-all-unfoldings

    -- Worker wrappers introduce unstable names for functions that might have
    -- blackboxes attached for them. You can disable this, but be sure to add
    -- a no-specialize pragma to every function with a blackbox.
    -fno-worker-wrapper

    -- Strict annotations - while sometimes preventing space leaks - trigger
    -- optimizations Clash can't deal with. See:
    --
    --    https://github.com/clash-lang/clash-compiler/issues/2361
    --
    -- These flags disables the optimization.
    -fno-unbox-small-strict-fields
    -fno-unbox-strict-fields
  default-language: GHC2021
  build-depends:
    , base
    , clash-prelude
    , ghc-typelits-extra >= 0.4.4
    , ghc-typelits-knownnat >= 0.7.7
    , ghc-typelits-natnormalise >= 0.7.7

library
  import: common-options
  hs-source-dirs: src
  build-depends:
    , clash-lib
    , ghc-typelits-proof-assist
    , template-haskell
    , deepseq
  exposed-modules:
    Clash.Crypto.Calculator
    Clash.Crypto.Calculator.CLU
    Clash.Crypto.Calculator.Fraction
    Clash.Crypto.Calculator.InverseModulo
    Clash.Crypto.Calculator.InverseModulo.Internal
    Clash.Crypto.Calculator.ISA
    Clash.Crypto.Calculator.Karatsuba
    Clash.Crypto.Calculator.Modulo
    Clash.Crypto.Calculator.Utils
    Clash.Crypto.Calculator.Simulate
    Clash.Crypto.ECDSA.Algorithm
    Clash.Crypto.ECDSA.Routines
    Clash.Crypto.ECDSA.Simulate
    Clash.Crypto.Hash.SHA
    Clash.Crypto.Hash.SHA.Specification
    Clash.Crypto.Hash.SHA.Specification.Types
    Clash.Crypto.Hash.SHA.Specification.Definitions
    Clash.Crypto.Hash.SHA.Specification.Properties
    Clash.Crypto.Hash.SHA.Specification.Algorithm
    Clash.Crypto.Hash.SHA.Streaming
    Clash.Crypto.Hash.SHA.Streaming.Stages
    Clash.Crypto.Hash.SHA.Streaming.Padding
    Clash.Crypto.MAC.HMAC
    Clash.Promoted.Integer
    Clash.Promoted.List
    Clash.Signal.Channel
    Clash.Signal.Delayed.Extra
    Clash.Signal.DataStream
    Clash.Signal.Extra
    Clash.Sized.Stack
    Data.Constraint.Nat.Extra
    Language.Haskell.Unicode

library test
  import: common-options
  hs-source-dirs: tests/lib
  build-depends:
    , clash-crypto
    , clash-lib
    , ghc-typelits-proof-assist
    , modular-arithmetic
  exposed-modules:
    Test.Clash.Crypto.Calculator
    Test.Clash.Crypto.Calculator.InverseModulo

test-suite simulation
  import: common-options
  hs-source-dirs: tests/sim
  type: exitcode-stdio-1.0
  ghc-options: -threaded
  main-is: Main.hs
  other-modules:
    Simulate.Clash.Crypto.Hash.SHA
    Simulate.Clash.Crypto.MAC.HMAC
    Simulate.Clash.Crypto.Calculator
    Simulate.Clash.Crypto.Calculator.CLU
    Simulate.Clash.Crypto.Calculator.InverseModulo
    Simulate.Clash.Crypto.Calculator.Karatsuba
    Simulate.Clash.Crypto.Calculator.Modulo
    Simulate.Clash.Sized.Stack
  build-depends:
    , bytestring
    , clash-crypto
    , clash-crypto:test
    , clash-prelude-hedgehog
    , crypton
    , deepseq
    , ghc-typelits-proof-assist
    , hedgehog >= 1.0
    , memory
    , modular-arithmetic
    , tasty >= 1.5
    , tasty-hedgehog >= 1.2 && < 1.5
    , tasty-hunit
    , typelits-witnesses

library hitl
  import: common-options
  hs-source-dirs: tests/hitl/lib
  build-depends:
    , clash-crypto
    , clash-lib
    , ghc-typelits-proof-assist
    , infinite-list
    , modular-arithmetic
    , mtl
    , pretty-show
    , string-interpolate
    , text
  exposed-modules:
    Hitl.Clash.Cores.LatticeSemi.ECP5.Domain
    Hitl.Clash.Cores.LatticeSemi.ECP5.Pll
    Hitl.Clash.Cores.Uart
    Hitl.Clash.Cores.Uart.Extra
    Hitl.Clash.Crypto.Calculator.CLU
    Hitl.Clash.Sized.Stack

library hitlt-instances
  import: common-options
  hs-source-dirs: tests/hitl/top
  build-depends:
    , clash-crypto
    , clash-crypto:hitl
    , clash-crypto:test
  exposed-modules:
    BEA
    Calculator
    CLU
    FastGCD
    FltCtmi
    HMAC
    Karatsuba
    KaratsubaModulo
    Modulo
    SictMi
    SHA
    Stack
    ISAPrint

test-suite hitlt
  import: common-options
  hs-source-dirs: tests/hitl/app
  type: exitcode-stdio-1.0
  ghc-options: -single-threaded
  main-is: Main.hs
  build-depends:
    , bytestring
    , clash-crypto
    , clash-crypto:hitl
    , clash-crypto:shake-rules
    , clash-crypto:test
    , clash-prelude-hedgehog
    , crypton
    , hedgehog >= 1.0
    , memory
    , modular-arithmetic
    , serialport >= 0.5.6
    , tasty >= 1.5
    , tasty-hedgehog >= 1.2 && < 1.5

executable clash
  import: common-options
  hs-source-dirs: app/clash
  ghc-options: -Wall -Wcompat -threaded
  main-is: Main.hs
  build-depends:
    , clash-crypto
    , clash-crypto:hitl
    , clash-ghc

common shake-options
  default-language: GHC2021
  ghc-options: -Wall -Wcompat -threaded
  default-extensions:
    LambdaCase
    RecordWildCards
    TypeFamilies
  hs-source-dirs: app/shake
  build-depends:
    , base
    , clash-crypto
    , directory
    , filepath
    , shake
    , unordered-containers
    , utf8-string

library shake-rules
  import: shake-options
  exposed-modules:
    Shake
  other-modules:
    Development.Shake.Config.Extra

executable shake
  import: shake-options
  ghc-options: -rtsopts "-with-rtsopts=-I0 -qg"
  main-is: Main.hs
  other-modules:
    Shake
    Development.Shake.Config.Extra
