cabal-version:       3.4
name:                clash-crypto
synopsis:            Cryptographic hardware in Clash
description:         Cryptographic hardware that is implemented in the
                     functional hardware description language Clash
version:             0.1
license:             CERN-OHL-P-2.0
license-file:        LICENSE
author:              QBayLogic B.V.
maintainer:          devops@qbaylogic.com
Copyright:           Copyright © 2024-2026 QBayLogic B.V.
Category:            Hardware

common common-options
  default-extensions:
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DerivingStrategies
    LambdaCase
    NoAllowAmbiguousTypes
    NoGeneralizedNewtypeDeriving
    NoImplicitPrelude
    NoStarIsType
    OverloadedRecordDot
    RequiredTypeArguments
    TypeFamilies
    UnicodeSyntax
    ViewPatterns
  ghc-options:
    -Wall -Wcompat
    -- Plugins to support type-level constraint solving on naturals
    -fplugin GHC.TypeLits.Extra.Solver
    -fplugin GHC.TypeLits.Normalise
    -fplugin GHC.TypeLits.KnownNat.Solver
    -fconstraint-solver-iterations=20

    -- Clash needs access to the source code in compiled modules
    -fexpose-all-unfoldings

    -- Worker wrappers introduce unstable names for functions that might have
    -- blackboxes attached for them. You can disable this, but be sure to add
    -- a no-specialize pragma to every function with a blackbox.
    -fno-worker-wrapper

    -- Strict annotations - while sometimes preventing space leaks - trigger
    -- optimizations Clash can't deal with. See:
    --
    --    https://github.com/clash-lang/clash-compiler/issues/2361
    --
    -- These flags disables the optimization.
    -fno-unbox-small-strict-fields
    -fno-unbox-strict-fields
  default-language: GHC2021
  build-depends:
    , base                                   >= 4.20   && < 4.21
    , clash-prelude                          >= 1.10   && < 2
    , ghc-typelits-extra                     >= 0.5.3  && < 0.6
    , ghc-typelits-knownnat                  >= 0.8.3  && < 0.9
    , ghc-typelits-natnormalise              >= 0.9.5  && < 0.10

library
  import: common-options
  hs-source-dirs: src
  build-depends:
    , clash-lib                              >= 1.10   && < 2
    , ghc-typelits-proof-assist              >= 0.1    && < 0.2
    , template-haskell                       >= 2.22   && < 2.23
  exposed-modules:
    Clash.Crypto.Calculator
    Clash.Crypto.Calculator.CLU
    Clash.Crypto.Calculator.Fraction
    Clash.Crypto.Calculator.InverseModulo
    Clash.Crypto.Calculator.ISA
    Clash.Crypto.Calculator.Karatsuba
    Clash.Crypto.Calculator.Modulo
    Clash.Crypto.PubKey.ECDSA
    Clash.Crypto.PubKey.ECDSA.Nonce.Deterministic
    Clash.Crypto.Hash.SHA
    Clash.Crypto.Hash.SHA.Specification
    Clash.Crypto.Hash.SHA.Specification.Types
    Clash.Crypto.Hash.SHA.Specification.Definitions
    Clash.Crypto.Hash.SHA.Specification.Properties
    Clash.Crypto.Hash.SHA.Specification.Algorithm
    Clash.Crypto.Hash.SHA.Streaming
    Clash.Crypto.Hash.SHA.Streaming.Stages
    Clash.Crypto.Hash.SHA.Streaming.Padding
    Clash.Crypto.MAC.HMAC
    Clash.Promoted.Integer
    Clash.Promoted.List
    Clash.Signal.Channel
    Clash.Signal.Delayed.Extra
    Clash.Signal.DataStream
    Clash.Sized.Stack
    Data.Constraint.Nat.Extra
    Language.Haskell.Unicode

library test
  import: common-options
  visibility: public
  hs-source-dirs: tests/lib
  build-depends:
    , clash-crypto
    , bytestring                             >= 0.12   && < 0.13
    , clash-lib                              >= 1.10   && < 2
    , crypton                                >= 1.0.4  && < 1.1
    , deepseq                                >= 1.5    && < 1.6
    , ghc-typelits-proof-assist              >= 0.1    && < 0.2
    , memory                                 >= 0.18   && < 0.19
    , modular-arithmetic                     >= 2.0    && < 2.1
  exposed-modules:
    Test.Clash.Crypto.Calculator
    Test.Clash.Crypto.Calculator.InverseModulo
    Test.Clash.Crypto.Calculator.Simulate
    Test.Clash.Crypto.Hash.SHA
    Test.Clash.Crypto.PubKey.ECDSA.Simulate

test-suite simulation
  import: common-options
  hs-source-dirs: tests/sim
  type: exitcode-stdio-1.0
  ghc-options: -threaded
  main-is: Main.hs
  other-modules:
    Simulate.Clash.Crypto.Calculator
    Simulate.Clash.Crypto.Calculator.CLU
    Simulate.Clash.Crypto.Calculator.InverseModulo
    Simulate.Clash.Crypto.Calculator.Karatsuba
    Simulate.Clash.Crypto.Calculator.Modulo
    Simulate.Clash.Crypto.Hash.SHA
    Simulate.Clash.Crypto.MAC.HMAC
    Simulate.Clash.Crypto.PubKey.ECDSA
    Simulate.Clash.Crypto.PubKey.ECDSA.Nonce.Deterministic
    Simulate.Clash.Sized.Stack
  build-depends:
    , clash-crypto
    , clash-crypto:test
    , bytestring                             >= 0.12   && < 0.13
    , clash-prelude-hedgehog                 >= 1.10   && < 2
    , crypton                                >= 1.0.4  && < 1.1
    , ghc-typelits-proof-assist              >= 0.1    && < 0.2
    , hedgehog                               >= 1.0.3  && < 1.8
    , memory                                 >= 0.18   && < 0.19
    , tasty                                  >= 1.5    && < 1.6
    , tasty-hedgehog                         >= 1.2    && < 1.5
    , tasty-hunit                            >= 0.10   && < 0.11
    , typelits-witnesses                     >= 0.4    && < 0.5

library hitl
  import: common-options
  hs-source-dirs: tests/hitl/lib
  build-depends:
    , clash-crypto
    , clash-lib                              >= 1.10   && < 2
    , ghc-typelits-proof-assist              >= 0.1    && < 0.2
    , infinite-list                          >= 0.1.2  && < 0.2
    , mtl                                    >= 2.3.1  && < 2.4
    , pretty-show                            >= 1.10   && < 1.11
    , string-interpolate                     >= 0.3.4  && < 0.4
    , text                                   >= 2.1    && < 2.2
  exposed-modules:
    Hitl.Clash.Cores.LatticeSemi.ECP5.Domain
    Hitl.Clash.Cores.LatticeSemi.ECP5.Pll
    Hitl.Clash.Cores.Uart
    Hitl.Clash.Cores.Uart.Extra
    Hitl.Clash.Crypto.Calculator.CLU
    Hitl.Clash.Crypto.Hash.Escape
    Hitl.Clash.Crypto.PubKey.ECDSA
    Hitl.Clash.Sized.Stack

library hitlt-instances
  import: common-options
  default-extensions: TemplateHaskell
  hs-source-dirs: tests/hitl/top
  build-depends:
    , clash-crypto
    , clash-crypto:hitl
    , clash-crypto:test
  exposed-modules:
    BEA
    Calculator
    CLU
    DeterministicNonce
    ECDSADerivePublicKey
    ECDSASign
    FastGCD
    FltCtmi
    HMAC
    Karatsuba
    KaratsubaModulo
    Modulo
    SictMi
    SHA
    Stack

test-suite hitlt
  import: common-options
  hs-source-dirs: tests/hitl/app
  type: exitcode-stdio-1.0
  ghc-options: -single-threaded
  main-is: Main.hs
  build-depends:
    , clash-crypto
    , clash-crypto:hitl
    , clash-crypto:test
    , bytestring                             >= 0.12   && < 0.13
    , clash-prelude-hedgehog                 >= 1.10   && < 2
    , crypton                                >= 1.0.4  && < 1.1
    , ghc-typelits-proof-assist              >= 0.1    && < 0.2
    , hedgehog                               >= 1.0.3  && < 1.8
    , memory                                 >= 0.18   && < 0.19
    , modular-arithmetic                     >= 2.0    && < 2.1
    , process                                >= 1.6    && < 1.7
    , serialport                             >= 0.6    && < 0.7
    , tasty                                  >= 1.5    && < 1.6
    , tasty-hedgehog                         >= 1.2    && < 1.5

executable clash
  import: common-options
  hs-source-dirs: app/clash
  ghc-options: -Wall -Wcompat -threaded
  main-is: Main.hs
  build-depends:
    , clash-crypto
    , clash-crypto:hitl
    , clash-ghc                              >= 1.10   && < 2

common shake-options
  default-language: GHC2021
  ghc-options: -Wall -Wcompat -threaded
  default-extensions:
    LambdaCase
    RecordWildCards
    TypeFamilies
  hs-source-dirs: app/shake
  build-depends:
    , clash-crypto
    , base                                   >= 4.20   && < 4.21
    , directory                              >= 1.3    && < 1.4
    , filepath                               >= 1.5    && < 1.6
    , shake                                  >= 0.19   && < 0.20
    , unordered-containers                   >= 0.2.20 && < 0.3
    , utf8-string                            >= 1.0.2  && < 1.1

library shake-rules
  import: shake-options
  exposed-modules:
    Shake
  other-modules:
    Development.Shake.Config.Extra

executable shake
  import: shake-options
  ghc-options: -rtsopts "-with-rtsopts=-I0 -qg"
  main-is: Main.hs
  other-modules:
    Shake
    Development.Shake.Config.Extra
